@@ -3,6 +3,8 @@ CHANGES IN VERSION 1.34
 
 BUG FIXES AND MINOR IMPROVEMENTS
 
+    o Fix bug where inputs to `getDirFile` were vectors in
+    `checkForValueSection` (@zeehio, #163)
     o Update internal documentation of the `BiocCheck-class`
     o Fix bug where line numbers were off due to removal of empty lines at
     parsing (@lshep, #159)
